--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 </head>
 <body>
     <div class="container">
-        <
-        <span class="avatar"></span>
-        <h1>Daria N. Lebedeva</h1>
-        <h2>Global Trade Advisory Manager</h2>
-
-        <ul>
-            <li><a href="">LinkedIn</a></li>
-            <li><a href="">Facebook</a></li>
-            <li><a href="">Email</a></li>
-        </ul>
+        <div>
+            <span class="avatar"></span>
+            <h1>Daria N. Lebedeva</h1>
+            <h2>Global Trade Advisory Manager</h2>
+        </div>
+        <div>
+            <ul>
+                <li><a href="">LinkedIn</a></li>
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Email</a></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
