--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html>
 <head>
     <title>Daria Lebedeva</title>
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:600|Montserrat:300" rel="stylesheet">
     <style type="text/css">
+        body {
+            background-image: linear-gradient(to right, #f78ca0 0%, #f9748f 19%, #fd868c 60%, #fe9a8b 100%);
+            box-shadow: inset 0 0 0 1.5em rgba(255, 255, 255, 0.85);
+            font-family: 'Crimson Text', serif;
+            padding: 3em;
+            margin: 0;
+            min-height: calc(100vh - 6em);
+            color: #fff;
+        }
         .avatar {
             border-radius: 50%;
+            background: url(./images/profile.jpg) center/cover;
+            width: 100pt;
+            height: 100pt;
+            display: block;
+            box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.15);
+            font-family: 'Montserrat', sans-serif;
         }
     </style>
 </head>
