--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Daria Lebedeva</title>
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:600|Montserrat:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,600|Montserrat:300" rel="stylesheet">
     <style type="text/css">
         body {
             background-image: linear-gradient(to right, #f78ca0 0%, #f9748f 19%, #fd868c 60%, #fe9a8b 100%);
@@ -21,6 +21,13 @@
             display: block;
             box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.15);
             font-family: 'Montserrat', sans-serif;
+        }
+        h1 { font-weight: 600; }
+        h2 {
+            font-weight: 400;
+            text-transform: uppercase;
+            font-size: 11pt;
+            letter-spacing: 3pt;
         }
     </style>
 </head>
