--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </div>
         <div>
             <ul>
-                <li><a href="">LinkedIn</a></li>
-                <li><a href="">Facebook</a></li>
-                <li><a href="">Email</a></li>
+                <li><a href="https://www.linkedin.com/in/dlebedeva">LinkedIn</a></li>
+                <li><a href="https://www.facebook.com/lebedeva">Facebook</a></li>
+                <li><a href="mailto:darialebedeva@gmail.com">Email</a></li>
             </ul>
         </div>
     </div>
