Use flex container for centering content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
             font-family: 'Crimson Text', serif;
             padding: 3em;
             margin: 0;
-            min-height: calc(100vh - 6em);
             color: #fff;
         }
         h1 { font-weight: 600; }
@@ -33,6 +32,12 @@
             background: #fff;
             color: #f78ca0;
             mix-blend-mode: multiply;
+        }
+        .container {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            height: calc(100vh - 6em)
         }
         .avatar {
             border-radius: 50%;
