--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,600|Montserrat:300" rel="stylesheet">
     <style type="text/css">
         body {
+            background: #fd868c;
             background-image: linear-gradient(to left, #f78ca0 0%, #f9748f 19%, #fd868c 60%, #fe9a8b 100%);
             box-shadow: inset 0 0 0 1.5em rgba(255, 255, 255, 0.85);
             font-family: 'Crimson Text', serif;
