--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             padding: 3em;
             margin: 0;
             color: #fff;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
         }
         h1 { font-weight: 600; }
         h2 {
