--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             width: 100pt;
             height: 100pt;
             display: block;
-            box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.15);
+            box-shadow: inset 0 0 0px 1px rgba(255, 255, 255, 0.25), 0 0 1px 1px rgba(0, 0, 0, 0.15);
 
         }
         .contact-links {
