--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         }
         .container {
             display: flex;
+            flex-direction: row;
             align-items: center;
             justify-content: space-around;
             height: calc(100vh - 6em)
@@ -56,6 +57,13 @@
             padding: 0;
             margin: 0;
             color: #fff;
+        }
+
+        @media only screen and (max-width: 660px) {
+            .container {
+                flex-direction: column;
+                min-height: 350pt;
+            }
         }
     </style>
 </head>
