--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             flex-direction: row;
             align-items: center;
             justify-content: space-around;
-            height: calc(100vh - 6em)
+            height: calc(100vh - 6em);
         }
         .avatar {
             border-radius: 50%;
