--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             align-items: center;
             justify-content: space-around;
             height: calc(100vh - 6em);
+            min-height: 225pt;
+            min-width: 200pt;
         }
         .avatar {
             border-radius: 50%;
