--- a/index.html
+++ b/index.html
@@ -59,12 +59,22 @@
             padding: 0;
             margin: 0;
             color: #fff;
+            text-align: right;
         }
 
         @media only screen and (max-width: 660px) {
             .container {
                 flex-direction: column;
                 min-height: 350pt;
+                text-align: center;
+            }
+
+            .avatar {
+                margin: 0 auto;
+            }
+
+            .contact-links {
+                text-align: center;
             }
         }
     </style>
