Improve mobile support

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Daria Lebedeva</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,600|Montserrat:300" rel="stylesheet">
     <style type="text/css">
         body {
@@ -41,7 +42,7 @@
             align-items: center;
             justify-content: space-around;
             height: calc(100vh - 6em);
-            min-height: 225pt;
+            min-height: 200pt;
             min-width: 200pt;
         }
         .avatar {
