Add support for iPhone X/XS/XR in landscape mode

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Daria Lebedeva</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,600|Montserrat:300" rel="stylesheet">
     <style type="text/css">
         body {
