Remove middle initial

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="container">
         <div>
             <span class="avatar"></span>
-            <h1>Daria N. Lebedeva</h1>
+            <h1>Daria Lebedeva</h1>
             <h2>Global Trade Advisory Manager</h2>
         </div>
         <div>
