--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
             }
         }
     </style>
+    <script type="text/javascript">
+        function replaceEmail(e)
+        {
+            e.href = e.href.replace("@@", ".").replace("x", "");
+        }
+    </script>
 </head>
 <body>
     <div class="container">
@@ -90,9 +96,9 @@
         <div>
             <h2>Connect</h2>
             <ul class="contact-links">
-                <li><a href="https://www.linkedin.com/in/dlebedeva">LinkedIn</a></li>
-                <li><a href="https://www.facebook.com/lebedeva">Facebook</a></li>
-                <li><a href="mailto:darialebedeva@gmail.com">Email</a></li>
+                <li id="linkedin"><a href="https://www.linkedin.com/in/dlebedeva">LinkedIn</a></li>
+                <li id="facebook"><a href="https://www.facebook.com/lebedeva">Facebook</a></li>
+                <li id="email"><a href="mailto:dariaxlebedeva@gmail@@com" onmouseover="replaceEmail(this)">Email</a></li>
             </ul>
         </div>
     </div>
